--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+  <!-- Подключаем библиотеку Supabase -->
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <meta charset="UTF-8">
   <title>Биология — тест</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -212,3 +214,4 @@
 </script>
 </body>
 </html>
+
