--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <!-- Подключаем библиотеку Supabase -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="script.js"></script>
   <meta charset="UTF-8">
   <title>Биология — тест</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -214,4 +215,5 @@
 </script>
 </body>
 </html>
+
 
