--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="ru">
 <head>
   <!-- Подключаем библиотеку Supabase -->
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="script.js"></script> <!-- здесь будет JS для регистрации/OTP -->
+<script src="app.js"></script>   <!-- твоя логика теста -->
+
   <meta charset="UTF-8">
   <title>Биология — тест</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -215,5 +217,6 @@
 </script>
 </body>
 </html>
+
 
 
