--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   toggleBtn.onclick = () => wrapper.classList.toggle("collapsed");
 
   // ====== OTP ======
-  const otpCodes = ["123456789012","A1B2C3D4E5F6","987654321098"];
+  const otpCodes = ["123456789012","A1B2C3D4E5F6"];
   const usedKey = "usedOtp";
 
   const otpOverlay = document.getElementById("otpOverlay");
@@ -149,3 +149,4 @@
 </script>
 </body>
 </html>
+
