--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   toggleBtn.onclick = () => wrapper.classList.toggle("collapsed");
 
   // ====== OTP для одного устройства с localStorage ======
-  const otpCodes = ["123456789012","A1B2C3D4E5F6","987654321098"]; // твои коды
+  const otpCodes = ["123456789012","A1B2C3D4E5F6"]; // твои коды
   const usedCodesKey = "usedOtpCodes"; // ключ localStorage для сохранённых кодов
 
   const otpOverlay = document.getElementById("otpOverlay");
@@ -126,3 +126,4 @@
 </script>
 </body>
 </html>
+
